Phase 9 Complete - Configuration Migrated to TOML
  Build successful on both Forge and Fabric.
  Changes made:
  ┌──────────────────────────┬───────────────────────────────────────┐
  │           File           │                Change                 │
  ├──────────────────────────┼───────────────────────────────────────┤
  │ common/build.gradle      │ Removed toml4j dependency             │
  ├──────────────────────────┼───────────────────────────────────────┤
  │ fabric/build.gradle      │ Added NightConfig (core + toml)       │
  ├──────────────────────────┼───────────────────────────────────────┤
  │ ConfigLoader.java        │ Rewritten to use NightConfig          │
  ├──────────────────────────┼───────────────────────────────────────┤
  │ businesscraft.toml       │ Created default config with comments  │
  ├──────────────────────────┼───────────────────────────────────────┤
  │ businesscraft.properties │ Deleted from forge/run and fabric/run │
  └──────────────────────────┴───────────────────────────────────────┘
  New config structure:
  - Sectioned: [general], [vehicles], [tourists], [economy], [milestones], [contracts], [production], [trading], [display], [player]
  - Comments preserved on save
  - Default config auto-copied from jar resources
  - Hot-reload still works via ConfigurationService

  Dependencies:
  - Forge: NightConfig bundled - no extra dependency
  - Fabric: Added night-config:core:3.8.1 and night-config:toml:3.8.1 (included in jar)

also

 GPI Persistence Bug Fixed

  You were right - the GlobalMarket singleton wasn't being reset between worlds.
  Root Cause:
  1. GlobalMarket is a static singleton that persists for the entire JVM session
  2. GlobalMarket.load() didn't clear existing data before loading new world data
  3. TownSavedData.create() (called for new worlds) didn't reset the market

  Fixes Applied:
  ┌─────────────────────────────────┬───────────────────────────────────────────────────────────────────┐
  │              File    